# ComfyUI-PromptList

./: ComfyUI_PromptList.py  LICENSE  License.txt  README [english].md  README.md  README_en.md  README_jp.md  __init__.py  config.json  list.csv  prompts.yaml  pyproject.toml
.github/workflows/: publish_action.yml
