[project]
name = "ComfyUI-PromptList"
description = "Custom node to manage prompts in YAML format.|プロンプトをYAMLでシンプルに管理するノード"
version = "1.0.0"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/NakamuraShippo/ComfyUI-PromptList"

[tool.comfy]
PublisherId = "nakamurashippo"
DisplayName = "ComfyUI-PromptList"
Icon = ""
